--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ Whenever I solve issues, I feel so good. That made me keep tracking my Software 
             </p>
             <div class="row-fluid">
                 <div class="col-sm-6 col-lg-6 hidden-sm hidden-md">
-                <a href="html/sensor_review.html">Mobile Resources</a></div>
-                <div class="col-sm-6 col-lg-6 hidden-sm hidden-md">Web Resources</div>
+                <a href="html/sensor_review.html">Sensor Resources</a></div>
             </div>
                 
         </div>
